--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Plack::Middleware::BlockHeaderInjection
 
+        - Added POD explaining what header injections are.
+
 v0.1.0  2014-06-26
 
         - First release on CPAN.
