--- a/Changes
+++ b/Changes
@@ -1,11 +1,17 @@
 Revision history for Plack::Middleware::BlockHeaderInjection
 
-        - Added POD explaining what header injections are.
+v0.1.1
 
-	- Added ACKNOWLEDGEMENTS section to POD.
+  [Documentation]
+  - Added POD explaining what header injections are.
 
-        - Added config for travis-ci in git repo.
+  - Added ACKNOWLEDGEMENTS section to POD.
+
+  - Reformatted Changes.
+
+  [Other Changes]
+   - Added config for travis-ci in git repo.
 
 v0.1.0  2014-06-26
 
-        - First release on CPAN.
+  - First release on CPAN.
