--- a/Changes
+++ b/Changes
@@ -7,6 +7,8 @@ Revision history for {{ $dist->name }}
   [Other]
   - Bumped version to v1.0.0.
 
+  - Lowered minimum Perl version to v5.8.
+
 v0.1.1  2014-08-16
 
   [Documentation]
