--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  [Toolchain]
+  - Removed `.travis.yml` from repo.
 
 v1.0.1    2020-12-11 15:32:37+00:00 Europe/London
   [Toolchain]
