--- a/Changes
+++ b/Changes
@@ -9,6 +9,8 @@ Revision history for {{ $dist->name }}
 
   - Removed `.travis.yml` from repo.
 
+  - Updated MANIFEST.SKIP rules.
+
 v1.0.1    2020-12-11 15:32:37+00:00 Europe/London
   [Toolchain]
   - Fixed error in Dist::Zilla config.
